feat: add java classes for openapi